# fund-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  compare.html  portfolio.html
.cargo/: config.toml
.claude/agents/: fund-comparator.md  fund-deep-analyzer.md
.claude/skills/fund-deep-analyzer/: SKILL.md
.github/workflows/: ci.yml
.serena/: project.yml
crates/fund-cli/: Cargo.toml
crates/fund-cli/src/: main.rs
crates/fund-cli/src/commands/: analyze.rs  backfill.rs  bigdata.rs  compare.rs  estimate.rs  export.rs  history.rs  holdings.rs  info.rs  mod.rs  portfolio.rs  rank.rs  rank_history.rs  search.rs  theme.rs  trend.rs
crates/fund-cli/src/ui/: display.rs  mod.rs
crates/fund-core/: Cargo.toml
crates/fund-core/src/: api.rs  db.rs  f10.rs  holdings.rs  holdings_config.rs  lib.rs  models.rs  realtime.rs  scoring.rs
scripts/: gen_portfolio_daily.py
