[workspace]
members = [
    "crates/fund-core",
    "crates/fund-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["fund-rs contributors"]
license = "MIT"

[workspace.dependencies]
minreq = { version = "2.12", features = ["https-native"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
urlencoding = "2.1"
rusqlite = "0.31"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
