[package]
name = "fund-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared core library for fund-rs: API client, models, and database"

[dependencies]
minreq.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
urlencoding.workspace = true
rusqlite.workspace = true
